# revma-desktop

./: .gitignore  README.md  database.py  episode.py  feed.py  main.py  podcast.py  pyproject.toml  ui.py
