[tool.poetry]
name = "revma-desktop"
version = "0.1.0"
description = ""
authors = ["Angelos Panagiotopoulos <angelospanag@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
feedparser = "^5.2.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
pep8-naming = "^0.10.0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
